[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fastbox"
version = "1.0.0"
description = "FastBox Delivery Simulator — logistics simulation for one day of operations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = []  # pure-stdlib; no third-party runtime deps

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
fastbox = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastbox*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["fastbox"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
